--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
+    <p>Adding more to get a handle on this, beginner stuff</p>
 </body>
 </html>
