--- a/parks.html
+++ b/parks.html
@@ -49,6 +49,7 @@
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/LHRPWestMtBike_GeoPDF.pdf">Lebanon Hills Regional Park - East</a><br />
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/LHRP_East_GeoPDF.pdf">Lebanon Hills Regional Park - Mt Biking</a><br />
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/WWRP_GeoPDF.pdf">Whitetail Wood Regional Park</a><br />
+            <a href="pdfmap://www.co.dakota.mn.us/parks/Documents/LebanonHillsEastSummerWinterTrailMap.pdf">Open in PDF Maps App</a>
          </div>
     </div>
 
