--- a/parks.html
+++ b/parks.html
@@ -49,7 +49,7 @@
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/LHRPWestMtBike_GeoPDF.pdf">Lebanon Hills Regional Park - East</a><br />
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/LHRP_East_GeoPDF.pdf">Lebanon Hills Regional Park - Mt Biking</a><br />
             <a href="http://maps.co.dakota.mn.us/memento/publisher/pdf/file/Parks/WWRP_GeoPDF.pdf">Whitetail Wood Regional Park</a><br />
-            <a href="pdfmap://com-avenza-heroku-mapstore-production.s3.amazonaws.com/VendorMaps/1/20150717161630_WhitetailWoodsSummerTrailMap.zip">Open in PDF Maps App</a>
+            <a href="pdfmap://com-avenza-heroku-mapstore-production.s3.amazonaws.com/VendorMaps/1/20150717161630_WhitetailWoodsSummerTrailMap.zip?Signature=1%2Fl%2FEeU%2BE5IzNKZJtvp3I7oSgAE%3D&Expires=1438448700&AWSAccessKeyId=AKIAIBSKTKGCL3O54PPQ&title=Whitetail+Woods+Regional+Park+Trail+Map">Open in PDF Maps App</a>
          </div>
     </div>
 
