--- a/weather.htm
+++ b/weather.htm
@@ -6,8 +6,6 @@
     <title>My Weather</title>
 </head>
 <body>
-<h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p>Adding more to get a handle on this, beginner stuff</p>
+<object width="290" height="130"><param name="movie" value="http://www.wunderground.com/swf/pws_mini_rf_nc.swf?station=KMNROSEM16&freq=&units=english&lang=EN" /><embed src="http://www.wunderground.com/swf/pws_mini_rf_nc.swf?station=KMNROSEM16&freq=&units=english&lang=EN" type="application/x-shockwave-flash" width="290" height="130" /></object>
 </body>
 </html>
