--- a/weather.htm
+++ b/weather.htm
@@ -7,5 +7,6 @@
 </head>
 <body>
 <object width="290" height="130"><param name="movie" value="http://www.wunderground.com/swf/pws_mini_rf_nc.swf?station=KMNROSEM16&freq=&units=english&lang=EN" /><embed src="http://www.wunderground.com/swf/pws_mini_rf_nc.swf?station=KMNROSEM16&freq=&units=english&lang=EN" type="application/x-shockwave-flash" width="290" height="130" /></object>
+<a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16"><img src="http://banners.wunderground.com/cgi-bin/banner/ban/wxBanner?bannertype=pws250&weatherstationcount=KMNROSEM16" width="250" height="150" border="0" alt="Weather Underground PWS KMNROSEM16" /></a>
 </body>
 </html>
