--- a/myPWS.htm
+++ b/myPWS.htm
@@ -5,7 +5,7 @@ jQuery(document).ready(function($) {
   url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
   dataType : "jsonp",
   success : function(parsed_json) {
-  var location = parsed_json['location']['city'];
+  var location = parsed_json['observation_location']['city'];
   var temp_f = parsed_json['current_observation']['temp_f'];
   alert("Current temperature in " + location + " is: " + temp_f);
   }
