--- a/myPWS.htm
+++ b/myPWS.htm
@@ -1,3 +1,4 @@
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script>
 jQuery(document).ready(function($) {
@@ -5,7 +6,7 @@ jQuery(document).ready(function($) {
   url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
   dataType : "jsonp",
   success : function(parsed_json) {
-  var location = parsed_json['current_observation']['city'];
+  //var location = parsed_json['current_observation']['city'];
   var temp_f = parsed_json['current_observation']['temp_f'];
   alert("Current temperature in " + location + " is: " + temp_f);
   }
