--- a/myPWS.htm
+++ b/myPWS.htm
@@ -6,9 +6,10 @@ jQuery(document).ready(function($) {
   url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
   dataType : "jsonp",
   success : function(parsed_json) {
-  var location = parsed_json['current_observation']['temp_c'];
+  //var location = parsed_json['current_observation']['temp_c'];
+  var ob_time = parsed_json['current_observation']['observation_time']
   var temp_f = parsed_json['current_observation']['temp_f'];
-  alert("Current temperature in " + location + " is: " + temp_f);
+  alert("Current temperature at " + ob_time + " is: " + temp_f);
   }
   });
 });
