--- a/myPWS.htm
+++ b/myPWS.htm
@@ -1,4 +1,6 @@
 
+<html>
+  <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script>
 jQuery(document).ready(function($) {
@@ -10,7 +12,10 @@ jQuery(document).ready(function($) {
   var ob_time = parsed_json['current_observation']['observation_time']
   var temp_f = parsed_json['current_observation']['temp_f'];
   alert("Current temperature at " + ob_time + " is: " + temp_f);
+  document.write(ob_time + temp_f)
   }
   });
 });
 </script>
+</head>
+</html>
