--- a/myPWS.htm
+++ b/myPWS.htm
@@ -12,7 +12,7 @@ jQuery(document).ready(function($) {
   var ob_time = parsed_json['current_observation']['observation_time']
   var temp_f = parsed_json['current_observation']['temp_f'];
   //alert("Current temperature at " + ob_time + " is: " + temp_f);
-  document.write(ob_time + <BR> + temp_f + &#176; +"F")
+  document.write(ob_time +  temp_f + "F")
   }
   });
 });
