--- a/myPWS.htm
+++ b/myPWS.htm
@@ -13,7 +13,7 @@ jQuery(document).ready(function($) {
   var temp_f = parsed_json['current_observation']['temp_f'];
   var rel_hum = parsed_json['current_observation']['relative_humidity']
   //alert("Current temperature at " + ob_time + " is: " + temp_f);
-  document.write(ob_time +'<BR>' + 'Temperature: ' temp_f + 'F' +'<BR>' + 'Relative Humidity: ' + rel_hum)
+  document.write(ob_time +'<BR>' + 'Temperature: ' + temp_f + 'F' +'<BR>' + 'Relative Humidity: ' + rel_hum)
   }
   });
 });
