--- a/myPWS.htm
+++ b/myPWS.htm
@@ -15,7 +15,7 @@ jQuery(document).ready(function($) {
   var rel_hum = parsed_json['current_observation']['relative_humidity']
   //alert("Current temperature at " + ob_time + " is: " + temp_f);
   //});
-  document.write(ob_time +'<BR>' + 'Temperature: ' + temp_f + 'F' +'<BR>' + 'Wind ' + wind_s + '<BR>' + 'Relative Humidity: ' + rel_hum)
+  document.write(ob_time +'<BR>' + 'Temperature: ' + temp_f + 'F' +'<BR>' + '<BR>' + 'Relative Humidity: ' + rel_hum)
   }
 });
 </script>
