--- a/mypws2.htm
+++ b/mypws2.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -32,25 +32,48 @@ jQuery(document).ready(function($) {
   url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
   dataType : "jsonp",
   success : function(parsed_json) {
-  //var location = parsed_json['current_observation']['temp_c'];
   var ob_time = parsed_json['current_observation']['observation_time']
   var temp_f = parsed_json['current_observation']['temp_f'];
   var wind_s = parsed_json['current_observation']['wind_string']
   var rel_hum = parsed_json['current_observation']['relative_humidity']
-  //alert("Current temperature at " + ob_time + " is: " + temp_f);
-  document.write('<head> <link rel="stylesheet" type="text/css" href="css/myPWS.css"/></head>')
-  document.write('<body>')
-  document.write('<p>')
-  document.write('<table style="width:100%">')
-  document.write('<tr>')
-  document.write('<td>'+ob_time+'</td>')
-  document.write('<td>')
-  document.write('Temperature: ' + temp_f + 'F' +'<BR>' + 'Relative Humidity: ' + rel_hum)
-  document.write('</p>')
-  document.write('</td>')
-  document.write('</tr>')
-  document.write('</table>')
-  document.write('</body>')
+
+
+  
+  document.write('<div class="container">')
+  document.write('<div class="page-header">')
+  document.write('<h1>My Personal Weather Station</h1></div>')
+  document.write('<table class="table table-striped">')
+
+  document.write('<div class="row">')
+  document.write('<div class="col-xs-6">' + ob_time + '</div>')
+  document.write('</div>')
+
+  document.write('<div class="row">')
+  document.write('<div class="col-xs-6">Temperature</div>')
+  document.write('<div class="col-xs-6">'+temp_f+'</div>')
+  document.write('</div>')
+
+
+
+  //document.write('<tr>')
+  //document.write('<td>')
+  //document.write('Temperature:')
+  //document.write('</td>')
+  //document.write('<td>')
+  //document.write(temp_f + 'F')
+  //document.write('<td>')
+  //document.write('</tr>')
+
+  //document.write('<tr>')
+  //document.write('<td>')
+  //document.write('Relative Humidity')
+  //document.write('</td>')
+  //document.write('<td>')
+  //document.write(rel_hum)
+  //document.write('</td>')
+  //document.write('</tr>')
+  //document.write('</table>')
+      //document.write('</div>')
   }
   });
 });
