--- a/myPWS.htm
+++ b/myPWS.htm
@@ -1,29 +1,73 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/myPWS.css"/>
-<style>
-    h1    {color:red;}
-</style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script>
-jQuery(document).ready(function($) {
-  $.ajax({
-  url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
-  dataType : "jsonp",
-  success : function(parsed_json) {
-  //var location = parsed_json['current_observation']['temp_c'];
-  var ob_time = parsed_json['current_observation']['observation_time']
-  var temp_f = parsed_json['current_observation']['temp_f'];
-  var wind_s = parsed_json['current_observation']['wind_string']
-  var rel_hum = parsed_json['current_observation']['relative_humidity']
-  //alert("Current temperature at " + ob_time + " is: " + temp_f);
-  document.write('<h1>')
-  document.write(ob_time +'<BR>' + 'Temperature: ' + temp_f + 'F' +'<BR>' + 'Relative Humidity: ' + rel_hum)
-  document.write('</h1>')
-  }
-  });
-});
-</script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>My PWS</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-</html>
+<body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+
+    <h1>My Personal Weather Station</h1>
+
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th id="ob_time"></th>
+                    <th></th>
+                </tr>
+                <tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Temperature</th>
+                    <th id="temp_f"></th>
+                </tr>
+                <tr>
+                    <th>Relative Humidity</th>
+                    <th id="rel_h"></th>
+                </tr>
+                <tr>
+                    <th>Wind</th>
+                    <th id="wind_s"></th>
+                </tr>
+                <tr>
+                    <th>Pressure</th>
+                    <th id="pressure_i"></th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+    jQuery(document).ready(function($) {
+    $.ajax({
+    url : "http://api.wunderground.com/api/62638971d08649b1/conditions/q/pws:KMNROSEM16.json",
+    dataType : "jsonp",
+    success : function(parsed_json) {
+    document.getElementById("ob_time").innerHTML = parsed_json['current_observation']['observation_time'];
+    document.getElementById("temp_f").innerHTML = parsed_json['current_observation']['temperature_string'];
+    document.getElementById("rel_h").innerHTML = parsed_json['current_observation']['relative_humidity'];
+    document.getElementById("wind_s").innerHTML = parsed_json['current_observation']['wind_string'];
+    document.getElementById("pressure_i").innerHTML = parsed_json['current_observation']['pressure_in']+" inHG";
+    }
+    });
+    });
+    </script>
+
+</body>
+</html> 
