--- a/mypws.htm
+++ b/mypws.htm
@@ -102,6 +102,7 @@
     document.getElementById("precip_today").innerHTML = parsed_json['current_observation']['precip_today_string'];
     document.getElementById("forecast_ur").innerHTML = parsed_json['current_observation']['forecast_url'];
     document.getElementById("history_ur").innerHTML = parsed_json['current_observation']['history_url'];
+    document.getElementById("icon_ur").innerHTML = parsed_json['current_observation']['icon_url'];
     }
     });
     });
