--- a/mypws.htm
+++ b/mypws.htm
@@ -26,7 +26,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th id="ob_time"></th>
+                    <th colspan="2" id="ob_time"></th>
                     <th></th>
                 </tr>
                 <tr>
