--- a/mypws.htm
+++ b/mypws.htm
@@ -20,7 +20,25 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 
-    <h1>My Personal Weather Station</h1>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">My PWS</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="http://www.wunderground.com/US/MN/Rosemount.html">Forecast</a></li>
+        <li><a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16">History</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <div class="container">
         <table class="table table-striped">
@@ -73,15 +91,10 @@
                     <th>Precipitation Today</th>
                     <th id="precip_today"></th>
                 </tr>
-                <tr>
-                    <th colspan="2">
-                        <a href="http://www.wunderground.com/US/MN/Rosemount.html"  class="btn btn-info" role="button">Forecast</a>
-                        <a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16"  class="btn btn-info" role="button">History</a>
-                    </th>
-                </tr>
             </tbody>
         </table>
     </div>
+
 
     <script>
     jQuery(document).ready(function($) {
@@ -102,7 +115,6 @@
     document.getElementById("precip_today").innerHTML = parsed_json['current_observation']['precip_today_string'];
     document.getElementById("forecast_ur").innerHTML = parsed_json['current_observation']['forecast_url'];
     document.getElementById("history_ur").innerHTML = parsed_json['current_observation']['history_url'];
-    document.getElementById("icon_ur").innerHTML = parsed_json['current_observation']['icon_url'];
     }
     });
     });
