--- a/mypws.htm
+++ b/mypws.htm
@@ -45,7 +45,6 @@
             <thead>
                 <tr>
                     <th colspan="2" id="ob_time"></th>
-                    <th></th>
                 </tr>
                 <tr>
                 </tr>
@@ -72,23 +71,23 @@
                     <th id="dewpt_s"></th>
                 </tr>
                 <tr>
-                    <th>Heat Index</th>
+                    <th>Heat Index <span class="glyphicon glyphicon-fire"></span></th>
                     <th id="heat_in"></th>
                 </tr>
                 <tr>
-                    <th>Wind Chill</th>
+                    <th>Wind Chill  <span class="glyphicon glyphicon-leaf"></th>
                     <th id="wind_ch"></th>
                 </tr>
                 <tr>
-                    <th>Feels Like</th>
+                    <th>Feels Like  <span class="glyphicon glyphicon-hand-right"></th>
                     <th id="feelslike_s"></th>
                 </tr>
                 <tr>
-                    <th>Visibility</th>
+                    <th>Visibility <span class="glyphicon glyphicon-sunglasses"></th>
                     <th id="vis"></th>
                 </tr>
                 <tr>
-                    <th>Precipitation Today</th>
+                    <th>Precipitation Today <span class="glyphicon glyphicon-tint"></th>
                     <th id="precip_today"></th>
                 </tr>
             </tbody>
