--- a/mypws.htm
+++ b/mypws.htm
@@ -59,7 +59,7 @@
                     <th id="rel_h"></th>
                 </tr>
                 <tr>
-                    <th>Wind</th>
+                    <th>Wind <span class="glyphicon glyphicon-send"></span></th>
                     <th id="wind_s"></th>
                 </tr>
                 <tr>
@@ -83,7 +83,7 @@
                     <th id="feelslike_s"></th>
                 </tr>
                 <tr>
-                    <th>Visibility <span class="glyphicon glyphicon-sunglasses"></th>
+                    <th>Visibility <span class="glyphicon glyphicon-eye-open"></th>
                     <th id="vis"></th>
                 </tr>
                 <tr>
