--- a/mypws.htm
+++ b/mypws.htm
@@ -51,7 +51,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th>Temperature</th>
+                    <th>Temperature <img src="images/glyphicons/png/glyphicons-730-temperature.png" height="18" width="9"></th>
                     <th id="temp_f"></th>
                 </tr>
                 <tr>
@@ -75,7 +75,7 @@
                     <th id="heat_in"></th>
                 </tr>
                 <tr>
-                    <th>Wind Chill  <span class="glyphicon glyphicon-leaf"></th>
+                    <th>Wind Chill  <img src="images/glyphicons/png/glyphicons-22-snowflake.png" height="12" width="12"></th>
                     <th id="wind_ch"></th>
                 </tr>
                 <tr>
@@ -87,7 +87,7 @@
                     <th id="vis"></th>
                 </tr>
                 <tr>
-                    <th>Precipitation Today <span class="glyphicon glyphicon-tint"></th>
+                    <th>Precipitation Today <img src="images/glyphicons/png/glyphicons-71-umbrella.png" height="13" width="14"></th>
                     <th id="precip_today"></th>
                 </tr>
             </tbody>
