--- a/mypws.htm
+++ b/mypws.htm
@@ -33,7 +33,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="weathermap.html">Radar Map</a></li>
+        <li><a href="radar.html">Radar Map</a></li>
         <li><a href="http://www.wunderground.com/US/MN/Rosemount.html">Forecast</a></li>
         <li><a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16">History</a></li>
       </ul>
