--- a/satellite.html
+++ b/satellite.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Radar Map</title>
+    <title>Satellite Map</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -30,8 +30,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="mypws.htm">Home</a></li>
-        <li><a href="#">Radar</a></li>
-          <li><a href="satellite.html">Satellite</a></li>
+        <li><a href="radar.html">Radar</a></li>
+          <li><a href="#">Satellite</a></li>
         <li><a href="http://www.wunderground.com/US/MN/Rosemount.html">Forecast</a></li>
         <li><a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16">History</a></li>
       </ul>
@@ -39,7 +39,7 @@
   </div>
 </nav>
 <div class="container"></div>
-<img src="http://api.wunderground.com/api/62638971d08649b1/animatedradar/image.gif?centerlat=44.740677&centerlon=-93.105431.4&radius=100&width=280&height=280&newmaps=1&timelabel=10&timelabel.y=20&num=5&delay=50" class="img-rounded">
+<img src="http://api.wunderground.com/api/62638971d08649b1/animatedsatellite/image.gif?centerlat=44.740677&centerlon=-93.105431.4&radius=100&width=280&height=280&newmaps=1&timelabel=10&timelabel.y=20&num=5&delay=50" class="img-rounded">
 </div>
 </body>
 </html>
