working on menu and map

--- a/map.html
+++ b/map.html
@@ -30,8 +30,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="mypws.htm">Home</a></li>
-        <li><a href="#">Radar</a></li>
-          <li><a href="satellite.html">Satellite</a></li>
+        <li><a href="#">Radar Map</a></li>
         <li><a href="http://www.wunderground.com/US/MN/Rosemount.html">Forecast</a></li>
         <li><a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16">History</a></li>
       </ul>
@@ -39,7 +38,7 @@
   </div>
 </nav>
 <div class="container"></div>
-<img src="http://api.wunderground.com/api/62638971d08649b1/animatedradar/image.gif?centerlat=44.740677&centerlon=-93.105431.4&radius=100&width=280&height=280&newmaps=1&timelabel=10&timelabel.y=20&num=5&delay=50" class="img-rounded">
+<img src="http://api.wunderground.com/api/62638971d08649b1/animatedradar/image.gif?centerlat=44.740677&centerlon=-93.105431&radius=100&width=280&height=280&newmaps=1&timelabel=10&timelabel.y=20&num=5&delay=50" class="img-rounded">
 </div>
 </body>
 </html>
