--- a/mypws.htm
+++ b/mypws.htm
@@ -33,11 +33,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Maps<span class="caret"></span> </a>
-          <ul class="dropdown-menu">
-          <li><a href="radar.html">Radar</a></li>
-          <li><a href="satellite.html">Satellite</a></li>
-          </ul>
+        <li><a href="map.html">Radar Map</a></li>
         </li>
         <li><a href="http://www.wunderground.com/US/MN/Rosemount.html">Forecast</a></li>
         <li><a href="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KMNROSEM16">History</a></li>
