--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Hello World</title>
+  <title>DCGIS Joe</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 100%;
+      margin: auto;
+  }
+  </style>
 </head>
 <body>
-<h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p>Adding more to get a handle on this, beginner stuff</p>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="#"><img src="images/glyphicons/png/glyphicons-331-blog.png" width="21" height="23">Blog</a></li>
+        <li><a href="https://www.openstreetmap.org/user/DCJoeS/history#map=11/44.7283/-93.1608"><img src="images/glyphicons/png/glyphicons-503-map.png" width="21" height="23">OSM Edits</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="images\covercarousel\osm.jpg" alt="blog" width="940" height="470">
+        <div class="carousel-caption">
+          <h3>@DCGISJoe</h3>
+          <p>OSM Enthusiast</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images\covercarousel\soccercoach.jpg" alt="coach" width="940" height="470">
+        <div class="carousel-caption">
+          <h3>@DCGISJoe</h3>
+          <p>Beloved coach</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images\covercarousel\shirts.jpg" alt="shirts" width="940" height="470">
+        <div class="carousel-caption">
+          <h3>@DCGISJoe</h3>
+          <p>A guy with a lot of dress shirts</p>
+        </div>
+      </div>
+
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>-->
+
+
+  </div>
+</div>
+<br>
+<div class="container">
+    <div class="panel-group">
+        <div class="panel panel-default">
+            <div class="panel-heading">Welcome</div>
+            <div class="panel-body">So I've been playing around with bootstrap this morning.</div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
