--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="#"><img src="images/glyphicons/png/glyphicons-331-blog.png" width="21" height="23">Blog</a></li>
+        <li><a href="http://dcgisjoe.blogspot.com/"><img src="images/glyphicons/png/glyphicons-331-blog.png" width="21" height="23">Blog</a></li>
         <li><a href="https://www.openstreetmap.org/user/DCJoeS/history#map=11/44.7283/-93.1608"><img src="images/glyphicons/png/glyphicons-503-map.png" width="21" height="23">OSM Edits</a></li>
       </ul>
     </div>
