--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
 <style>
 body {
-    background-color: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(19,39,215,1) 61%, rgba(5,115,238,1) 100%);
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(19,39,215,1) 61%, rgba(5,115,238,1) 100%);
 }
 </style>
   <body>
