--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
 body {
     background: rgb(31,26,53);
-    background: linear-gradient(130deg, rgba(31,26,53,1) 0%, rgba(31,26,53,1) 50%, rgba(66,52,105,1) 100%);
+    background: radial-gradient(circle, rgba(31,26,53,1) 0%, rgba(31,26,53,1) 50%, rgba(66,52,105,1) 100%);
 }
 </style>
   <body>
