--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <style>
 body {
     background: rgb(31,26,53);
-    background: radial-gradient(circle, rgba(31,26,53,1) 0%, rgba(31,26,53,1) 50%, rgba(66,52,105,1) 100%);
+}
+h1 {
+    color:white;
+    text-align: center;
 }
 </style>
   <body>
