--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ h1 {
     color:white;
     text-align: center;
     font-family: Arial;
-    font-style: bold;
+    font-weight: bold;
 }
 </style>
   <body>
-    <h1>Joe Sapletal, GISP</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <br>
+    <h1>Joe Sapletal, GISP</h1>  
+</body>
 </html>
