--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@ h1 {
     font-weight: bold;
     font-size: 40px;
 }
+h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 20px;
+}
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <br>
     <br>
-    <h1>Joe Sapletal, GISP</h1>  
+    <br>
+    <br>
+    <h1>Joe Sapletal, GISP</h1>
+    <h2>GIS Manager</h2>
+    <h2>Dakota County Information Technology, Office of GIS</h2>
+    <h2></h2>
 </body>
 </html>
