--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@ h2 {
     font-weight: noraml;
     font-size: 20px;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <br>
-    <br>
-    <br>
+    <img src="images/hero.png" alt="elevation surface" width="1000" height="300">
     <br>
     <h1>Joe Sapletal, GISP</h1>
     <h2>GIS Manager</h2>
-    <h2>Dakota County Information Technology, Office of GIS</h2>
-    <h2></h2>
+    <h2>Dakota County Information Technology</h2>
+    <h2>Office of GIS</h2>
 </body>
 </html>
