--- a/index.html
+++ b/index.html
@@ -28,12 +28,36 @@ img {
   max-width: 100%;
   height: auto;
 }
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/hero/hero.png");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <br>
-    <img src="images/hero.png" alt="elevation surface" width="1000" height="300">
+    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300">
     <br>
+    <div class="hero-image">
+        <div class="hero-text">
+          <h1 style="font-size:50px">I am John Doe</h1>
+          <p>And I'm a Photographer</p>
+          <button>Hire me</button>
+        </div>
+      </div>
     <h1>Joe Sapletal, GISP</h1>
     <h2>GIS Manager</h2>
     <h2>Dakota County Information Technology</h2>
