--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@ img {
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <br>
-    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300">
+    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
     <br>
     <h1>Joe Sapletal, GISP</h1>
     <h2>GIS Manager</h2>
