--- a/index.html
+++ b/index.html
@@ -31,11 +31,26 @@ img {
   margin-right: auto;
   height: auto;
 }
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
-    <br>
+    <!--<img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%"> -->
+    <!--<br> -->
+    <div class="container">
+        <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
+        <div class="centered">Joe Sapletal, GISP</div>
+      </div>
     <h1>Joe Sapletal, GISP</h1>
     <h2>GIS Manager</h2>
     <h2>Dakota County Information Technology</h2>
