--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 40px;
 }
 </style>
   <body>
