--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@ img {
   font-weight: bold;
   font-size: 40px;
 }
+.container img {vertical-align: middle;}
+
+.container .content {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(31, 26, 53, 0.75); /* Black background with 0.75 opacity */
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -52,7 +63,9 @@ img {
     <!--<br> -->
     <div class="container">
         <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
-        <div class="centered">Joe Sapletal, GISP</div>
+        <div class="content">
+            <h1>Sapletal, GISP</h1>
+        </div>
       </div>
     <h1>Joe Sapletal, GISP</h1>
     <h2>GIS Manager</h2>
