--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ img {
 .container {
   position: relative;
   text-align: center;
+  max-width: 100%;
+  margin: 0 auto;
   color: white;
 }
 .centered {
@@ -49,7 +51,7 @@ img {
   position: absolute;
   bottom: 0;
   background: rgb(31, 26, 53); /* Fallback color */
-  background: linear-gradient(180deg, rgba(31,26,53,0) 0%, rgba(31,26,53,1) 50%, rgba(66,52,105,1) 100%);
+  background: linear-gradient(0deg, rgba(31,26,53,1) 0%, rgba(31,26,53,0.753466352361257) 75%, rgba(66,52,105,0) 100%);
   color: #f1f1f1;
   width: 100%;
   padding: 10px;
