--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   height: auto;
+  border-radius: 15px;
 }
 .container {
   position: relative;
