--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   height: auto;
-  border-radius: 15px;
 }
 .container {
   position: relative;
@@ -63,7 +62,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   height: auto;
-  border-radius: 15px;
 }
 </style>
   <body>
@@ -72,7 +70,7 @@ img {
     <!--<br> -->
     <br>
     <div class="container">
-        <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
+        <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
         <div class="content">
             <h1>Joe Sapletal, GISP</h1>
         </div>
