--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ img {
 </style>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!--<img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%"> -->
-    <!--<br> -->
+    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
+    <br>
     <br>
     <div class="container">
         <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
