--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
     <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
     <br>
     <br>
-    <div class="container">
+    <div class=".container-fluid">
         <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
         <div class="content">
             <h1>Joe Sapletal, GISP</h1>
