--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ img {
   font-weight: bold;
   font-size: 30px;
 }
-.container .content {
+.container-fluid .content {
   position: absolute;
   bottom: 0;
   background: rgb(31, 26, 53); /* Fallback color */
@@ -65,10 +65,10 @@ img {
 }
 </style>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
     <br>
-    <br>
+    <br>-->
     <div class=".container-fluid">
         <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
         <div class="content">
