--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joe Sapletal, GISP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap-theme.min.css" rel="stylesheet">
   </head>
 <style>
 body {
@@ -71,6 +72,9 @@ img {
     <br>-->
     <div class=".container-fluid">
         <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
+        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 24px; font-weight: bold; text-align: center;">
+            Overlay Text
+        </div>
         <div class="content">
             <h1>Joe Sapletal, GISP</h1>
         </div>
