--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ img {
     <br>
     <br>-->
     <div class=".container-fluid">
-        <img src="images/hero/hero.png" class="img-rounded" alt="elevation surface" width="1000" height="300" style="width:100%">
-        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 24px; font-weight: bold; text-align: center;">
+        <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
+            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 24px; font-weight: bold; text-align: center;">
             Overlay Text
-        </div>
+            </div>
         <div class="content">
             <h1>Joe Sapletal, GISP</h1>
         </div>
