--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@ img {
     <br>-->
     <div class=".container-fluid">
         <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
-            <div style="position: absolute; top: 5%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 30px; font-weight: bold; text-align: center;">
-            Joe Sapletal, GISP
+            <div background>
+                <div style="position: absolute; top: 5%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 30px; font-weight: bold; text-align: center;">
+                Joe Sapletal, GISP
+                </div>
             </div>
         <div class="content">
             <h1>Joe Sapletal, GISP</h1>
