--- a/index.html
+++ b/index.html
@@ -66,16 +66,10 @@ img {
 }
 </style>
   <body>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
-    <br>
-    <br>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div class=".container-fluid">
         <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
             <div background>
-                <div style="position: absolute; top: 5%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 30px; font-weight: bold; text-align: center;">
-                Joe Sapletal, GISP
-                </div>
                 <div class="content">
                     <h1>Joe Sapletal, GISP</h1>
                 </div>
