--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@ img {
 </style>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<div class="container-fluid">
-    <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
-    <div class="content">
-        <h1>Joe Sapletal, GISP</h1>
+    <div class="container-fluid">
+        <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
+            <div background>
+                <div class="content">
+                    <h1>Joe Sapletal, GISP</h1>
+                </div>
+            </div>
     </div>
-</div>
     <h2>GIS Manager</h2>
     <h2>Dakota County Information Technology</h2>
     <h2>Office of GIS</h2>
