--- a/test.html
+++ b/test.html
@@ -28,8 +28,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="position-relative">
-                    <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Full Width Image">
-                    <div class="bottom-center-text">Your Text Here</div>
+                    <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Full Width Image" width="1000" height="300" style="width:100%">
+                    <div class="bottom-center-text">Joe Sapletal, GISP</div>
                 </div>
             </div>
         </div>
