--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ font-size: 15px;
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <div class="position-relative">
+                <!--<div class="position-relative">-->
                     <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Elevation Surface" width="1000" height="300" style="width:100%">
                     <div class="bottom-center-text">Joe Sapletal, GISP</div>
                 </div>
