--- a/circle.html
+++ b/circle.html
@@ -45,10 +45,6 @@
         <div class="col"></div>
     </div>  
 </div>
-<div class="vstack gap-3 max-w-xs mx-auto">
-    <button type="button" class="btn btn-primary">Save changes</button>
-    <button type="button" class="btn btn-default">Dakota County ArcGIS Online</button>
-    <a href="https://dakotacounty.maps.arcgis.com" class="btn btn-link">Back</a>
-</div>
+<a href="https://google.com" class="btn btn-primary">Go to Google</a>
 </body>
 </html>
