--- a/circle.html
+++ b/circle.html
@@ -32,6 +32,12 @@
   a {
     text-decoration: none;
   }
+  .btn-outline-primary {
+    color: rgb(180, 20, 224);
+    background-color: transparent;
+    background-image: none;
+    border-color: #7cc
+}
   </style>
 </head>
 <body>
