--- a/circle.html
+++ b/circle.html
@@ -58,7 +58,10 @@
 <div class="container mt-3">
     <div class="d-grid gap-3">   
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">ArcGIS Online</a></button>
-        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">Dakota County</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.co.dakota.mn.us" style="color:inherit">Dakota County</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.github.com/DCJoeS" style="color:inherit">Github</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.instagram.com/jsapletal" style="color:inherit">Instagram</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.x.com/DCGISJoe" style="color:inherit">X</a></button>
     </div>
 </div>
 </body>
