--- a/circle.html
+++ b/circle.html
@@ -27,7 +27,7 @@
     font-size: 13px;
   }
   img {
-    border: 5px solid #c10ace;
+    border: 4px solid #c10ace;
   }
   a {
     text-decoration: none;
@@ -61,6 +61,8 @@
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.co.dakota.mn.us" style="color:inherit">Dakota County</a></button>
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.github.com/DCJoeS" style="color:inherit">Github</a></button>
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.instagram.com/jsapletal" style="color:inherit">Instagram</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.linkedin.com/in/joesapletal/" style="color:inherit">Linkedin</a></button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.openstreetmap.org/user/DCJoeS" style="color:inherit">OpenStreetMap/a></button>
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://www.x.com/DCGISJoe" style="color:inherit">X</a></button>
     </div>
 </div>
