--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -8,22 +8,22 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 body {
-    background-image: url("images/hero/hero.png");
-}
+    background: rgb(31,26,53);
+  }
 </style>
 </head>
 <body>
 <br>
 <div class="container">   
     <div class="row">
-        <div class="col-6"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div>
+        <div class="col-6"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div></div>
         <div class="col-6">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col"></div>
+      <div class="col"></div>
     </div>
 </div>
 <br>
