image link test

--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -55,7 +55,7 @@
 
     <div class="row" style="margin-top: 8px;">
         <div class="col-sm-1"></div></div>
-        <div class="col-sm-10"style="margin-top: 8px;"><img src="images\icons\generic-websit.svg" width="20" height="20"></div>
+        <div class="col-sm-10"style="margin-top: 8px;"><a href="https:www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="20" height="20" alt="Dakota County Website"></a></div>
         <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 
