--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -54,21 +54,13 @@
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col"></div></div>
-        <div class="col"style="margin-top: 8px;">
+        <div class="col">
             <a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" outline="none" alt="Dakota County Website"></a>
-            <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" width="30" height="30" border="0" outline="none" alt="LinkedIn"></a>
-        
-        
-        </div>
+        </div></div>
+        <div class="col"style="margin-top: 8px;">
+            <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" width="30" height="30" border="0" outline="none" alt="LinkedIn"></a>       </div>
         <div class="col"style="margin-top: 8px;"></div>
     </div>
-
-<div class="flex flex-wrap items-center text-center justify-center">
-    <a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" outline="none" alt="Dakota County Website"></a>
-    <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" width="30" height="30" border="0" outline="none" alt="LinkedIn"></a>
-
-</div>
 
 
     <div class="row" style="margin-top: 8px;">
