removed image border

--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -25,7 +25,7 @@
     font-size: 13px;
   }
   img {
-    border: 2px solid #ffffff;
+    border: 0px solid #ffffff;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -54,12 +54,12 @@
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col-sm-1">
+        <div class="col">
             <a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" outline="none" alt="Dakota County Website"></a>
         </div></div>
-        <div class="col-sm-1"style="margin-top: 8px;">
+        <div class="col"style="margin-top: 8px;">
             <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" width="30" height="30" border="0" outline="none" alt="LinkedIn"></a>       </div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>
+        <div class="col"style="margin-top: 8px;"></div>
     </div>
 
 
