another caontainer test

--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -39,6 +39,16 @@
     background-image: none;
     border-color: #ffffff;
 }
+
+.container {
+  align-items: center; 
+  float: left;
+}
+.image{
+    float: left;
+  padding: 5px;
+}
+
 </style>
 </head>
 <body>
@@ -62,6 +72,11 @@
         <div class="col"style="margin-top: 8px;"></div>
     </div>
 
+    <div class="container">
+        <div class="image"> <img src="images\icons\generic-website.svg" alt="This is my image." height="30px"/> </div> 
+        <div class="image"> <img src="images\icons\instagram.svg" alt="This is my second image." height="30px"/> </div> 
+        <div class="image"> <img src="images\icons\linkedin.svg" alt="My third image." height="30px"/> </div> 
+    </div>
 
     <div class="row" style="margin-top: 8px;">
         <div class="col"></div></div>
