close the fluid contanter?

--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -61,7 +61,7 @@
             <h2>joe.sapletal@co.dakota.mn.us</h2>   
         </div>
         <div class="col"style="margin-top: 8px;"></div>
-    </div>
+    </div></div>
 
 
     <div class="container">
