--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -65,13 +65,9 @@
 
     <div class="row" style="margin-top: 8px;">
     <div class="container">
-        <div class="col"style="margin-top: 8px;"></div>
-        <div class="row" style="margin-top: 8px;">
-        <div class="image"><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="This is my image." height="30px"/></a> </div> 
+        <div class="image"><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="This is my image." height="30px"/><div class="col"style="margin-top: 8px;"></a> </div> 
         <div class="image"> <img src="images\icons\instagram.svg" alt="This is my second image." height="30px"/> </div> 
         <div class="image"> <img src="images\icons\linkedin.svg" alt="My third image." height="30px"/> </div> 
-    </div>
-    <div class="col"style="margin-top: 8px;"></div>
     </div>
     </div>
 
