--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 
 
     <div class="container-fluid mt-3">
-          <div class="row">
+          <div class="row"style="margin-top: 8px;">
             <div class="col">.col</div>
             <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
             <div class="col">.col</div>
