--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
             <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
             <div class="col">.col</div>
           </div>
-          <h1>Joe Sapletal, GISP</h1>
+          <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
     </div>
 
 
