--- a/test.html
+++ b/test.html
@@ -51,6 +51,7 @@
             <div class="col">.col</div>
           </div>
           <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
+          <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
 
