testing another containner

--- a/test.html
+++ b/test.html
@@ -46,13 +46,26 @@
 
     <div class="container-fluid mt-3">
           <div class="row"style="margin-top: 8px;">
-            <div class="col">.col</div>
+            <div class="col"></div>
             <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"></div>
-            <div class="col">.col</div>
+            <div class="col"></div>
           </div>
           <h1 style="margin-top: 8px;">Joe Sapletal, GISP</h1>
           <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
+
+
+    <div class="container-fluid mt-3">
+        <div class="row"style="margin-top: 8px;">
+          <div class="col">.col</div>
+          <div class="col">.col</div>
+          <div class="col">.col</div>
+        </div>
+        <h2 style="margin-top: 8px;">GIS Manager</h2>
+        <h2>Dakota County Information Department</h2>
+        <h2>Office of GIS</h2>
+  </div>
+
 
 
 
