first image test

--- a/test.html
+++ b/test.html
@@ -54,6 +54,7 @@
           <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
+    <a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County" height="30px"/><div class="col"style="margin-top: 8px;"></a>
 
     <div class="container-fluid mt-3">
         <div class="row"style="margin-top: 8px;">
