--- a/test.html
+++ b/test.html
@@ -82,13 +82,13 @@
 
 <div class="row">
     <div class="column">
-      <img src="images\icons\generic-website.svg" alt="Snow" style="width:100%">
+      <img src="images\icons\generic-website.svg" alt="Snow" style="width:30px">
     </div>
     <div class="column">
-      <img src="images\icons\instagram.svg" alt="Forest" style="width:100%">
+      <img src="images\icons\instagram.svg" alt="Forest" style="width:30px">
     </div>
     <div class="column">
-      <img src="images\icons\linkedin.svg" alt="Mountains" style="width:100%">
+      <img src="images\icons\linkedin.svg" alt="Mountains" style="width:30px">
     </div>
   </div>
 
