images and layout

--- a/test.html
+++ b/test.html
@@ -30,14 +30,6 @@
     margin-left: auto;
     margin-right: auto;
   }
-  ul {
-    white-space: nowrap;
-  }
-
-  ul, li {
-    list-style: none;
-    display: inline;
-  }
   a {
     text-decoration: none;
   }
@@ -51,9 +43,9 @@
     display: flex;
   }
 
-  /* Create three equal columns that sits next to each other */
+  /* Create  equal columns that sits next to each other */
   .column {
-    flex: 33.33%;
+    flex: 14.29%;
     padding: 5px;
   }
 </style>
@@ -71,25 +63,29 @@
           <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
-<ul>
-    <li><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County Website" height="30px"/></a></li>
-    <li><a href="https://www.instagram.com/jsapletal"> <img src="images\icons\instagram.svg" alt="Dakota County" height="30px"/></a></li>
-    <li><a href="https://www.linkedin.com/in/joesapletal/"> <img src="images\icons\linkedin.svg" alt="Dakota County" height="30px"/></a></li>
-    <li><img src="4.jpg"></li>
-    <li><img src="5.jpg"></li>
-    <li><img src="6.jpg"></li>
-</ul>
-
 <div class="row">
     <div class="column">
-      <img src="images\icons\generic-website.svg" alt="Snow" style="width:30px">
+      <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg" alt="ArcGIS Online" style="width:30px"></a>
     </div>
     <div class="column">
-      <img src="images\icons\instagram.svg" alt="Forest" style="width:30px">
+      <a href="https://www.co.dakota.mn.us/"><img src="images\icons\generic-website.svg" alt="Dakota County" style="width:30px"></a>
     </div>
     <div class="column">
-      <img src="images\icons\linkedin.svg" alt="Mountains" style="width:30px">
+      <a href="https://www.github.com/DCJoeS"><img src="images\icons\github.svg" alt="Github" style="width:30px"></a>
     </div>
+    <div class="column">
+      <a href="https://www.instagram.com/jsapletal"><img src="images\icons\instagram.svg" alt="Instagram" style="width:30px"></a>
+    </div>
+    <div class="column">
+      <a href="https://www.linkedin.com/in/joesapletal/"><img src="images\icons\linkedin.svg" alt="LinkedIn" style="width:30px"></a>
+    </div>
+    <div class="column">
+      <a href="https://www.openstreetmap.org/user/DCJoeS"><img src="images\icons\linkedin.svg" alt="OpenStreetMap" style="width:30px"></a>
+    </div>
+    <div class="column">
+      <a href="https://www.x.com/DCGISJoe"><img src="images\icons\x.svg" alt="X" style="width:30px"></a>
+    </div>
+
   </div>
 
     
