test images again

--- a/test.html
+++ b/test.html
@@ -39,6 +39,9 @@
     background-image: none;
     border-color: #ffffff;
   }
+  .imgContainer{
+    float:left;
+  }
 </style>
 </head>
 <body>
@@ -54,7 +57,27 @@
           <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
-<div class="row">
+    <div class="image123">
+        <div class="imgContainer">
+            <img src="images\icons\generic-map.svg" alt="ArcGIS Online" height="30" width="30"/>
+       </div>
+        <div class="imgContainer">
+            <img  src="images\icons\generic-website.svg"  alt="Dakota County" height="30" width="30"/>
+        </div>
+        <div class="imgContainer">
+             <img class="middle-img" src="images\icons\github.svg" alt="Github" / height="30" width="30"/>
+        </div>
+            <div class="imgContainer">
+             <img src="images\icons\instagram.svg" alt="Instagram" / height="30" width="30"/>
+        </div>
+            <div class="imgContainer">
+             <img src="images\icons\linkedin.svg" alt="LinkedIn"/ height="30" width="30"/>
+        </div>
+    </div>
+
+
+
+    <div class="row">
     <div class="column">
       <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg" alt="ArcGIS Online" style="width:30px"></a>
     </div>
