--- a/test.html
+++ b/test.html
@@ -39,8 +39,11 @@
     background-image: none;
     border-color: #ffffff;
   }
-  .imgContainer{
-    float:center;
+  .container {
+    width: 500px;  
+  }
+  .container img {
+    float: left;
   }
 </style>
 </head>
@@ -57,24 +60,17 @@
           <h2>joe.sapletal@co.dakota.mn.us</h2>
     </div>
 
-    <div class="image123">
-        <div class="imgContainer">
-            <img src="images\icons\generic-map.svg" alt="ArcGIS Online" height="30" width="30"/>
-       </div>
-        <div class="imgContainer">
-            <img  src="images\icons\generic-website.svg"  alt="Dakota County" height="30" width="30"/>
-        </div>
-        <div class="imgContainer">
-             <img class="middle-img" src="images\icons\github.svg" alt="Github" / height="30" width="30"/>
-        </div>
-            <div class="imgContainer">
-             <img src="images\icons\instagram.svg" alt="Instagram" / height="30" width="30"/>
-        </div>
-            <div class="imgContainer">
-             <img src="images\icons\linkedin.svg" alt="LinkedIn"/ height="30" width="30"/>
-        </div>
+    <div class="container">
+        <img src="http://dummyimage.com/100x100/000/fff">
+        <img src="http://dummyimage.com/100x100/123/fff">
+        <img src="http://dummyimage.com/100x100/456/fff">
+        <img src="http://dummyimage.com/100x100/789/fff">
+        <img src="http://dummyimage.com/100x100/abc/fff">
+        <img src="http://dummyimage.com/100x100/def/fff">
+        <img src="http://dummyimage.com/100x100/fed/fff">
+        <img src="http://dummyimage.com/100x100/cba/fff">
+        <img src="http://dummyimage.com/100x100/987/fff">
     </div>
-
 
 
     <div class="row">
