another image test

--- a/test.html
+++ b/test.html
@@ -61,18 +61,16 @@
     </div>
 
     <div class="container">
-        <img src="http://dummyimage.com/100x100/000/fff">
-        <img src="http://dummyimage.com/100x100/123/fff">
-        <img src="http://dummyimage.com/100x100/456/fff">
-        <img src="http://dummyimage.com/100x100/789/fff">
-        <img src="http://dummyimage.com/100x100/abc/fff">
-        <img src="http://dummyimage.com/100x100/def/fff">
-        <img src="http://dummyimage.com/100x100/fed/fff">
-        <img src="http://dummyimage.com/100x100/cba/fff">
-        <img src="http://dummyimage.com/100x100/987/fff">
+        <img src="images\icons\generic-map.svg">
+        <img src="images\icons\generic-website.svg">
+        <img src="images\icons\github.svg">
+        <img src="images\icons\instagram.svg">
+        <img src="images\icons\linkedin.svg">
+        <img src="images\icons\linkedin.svg">
+        <img src="images\icons\x.svg">
     </div>
 
-
+<!-->
     <div class="row">
     <div class="column">
       <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg" alt="ArcGIS Online" style="width:30px"></a>
@@ -95,8 +93,7 @@
     <div class="column">
       <a href="https://www.x.com/DCGISJoe"><img src="images\icons\x.svg" alt="X" style="width:30px"></a>
     </div>
-
-  </div>
+    </div> -->
 
     
     
