--- a/test.html
+++ b/test.html
@@ -61,8 +61,8 @@
     </div>
 
     <div class="container">
-        <img src="images\icons\generic-map.svg">
-        <img src="images\icons\generic-website.svg">
+        <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg"></a>
+        <a href="https://www.co.dakota.mn.us/"><img src="images\icons\generic-website.svg"></a>
         <img src="images\icons\github.svg">
         <img src="images\icons\instagram.svg">
         <img src="images\icons\linkedin.svg">
@@ -70,7 +70,7 @@
         <img src="images\icons\x.svg">
     </div>
 
-<!-->
+<!--
     <div class="row">
     <div class="column">
       <a href="https://dakotacounty.maps.arcgis.com"><img src="images\icons\generic-map.svg" alt="ArcGIS Online" style="width:30px"></a>
